# Yebelo_Trading_Assignment

./: README.md
Yebelo_Trading_Assignment/: README.md
Yebelo_Trading_Assignment/backend/: Cargo.toml
Yebelo_Trading_Assignment/backend/src/: kafka.rs  main.rs  rsi.rs
Yebelo_Trading_Assignment/data_ingestion/: ingest.py  package.json  trades_data.csv
Yebelo_Trading_Assignment/docker/: Dockerfile.backend  docker-compose.yml
Yebelo_Trading_Assignment/docs/: AI-Usage.md
Yebelo_Trading_Assignment/frontend/: next.config.js  package.json
Yebelo_Trading_Assignment/frontend/src/components/: PriceChart.tsx  RSIChart.tsx  TokenSelector.tsx
Yebelo_Trading_Assignment/frontend/src/pages/: index.tsx
Yebelo_Trading_Assignment/frontend/src/styles/: globals.css
