[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Rust backend service for Yebelo assignment: consumes trade-data and publishes RSI"
license = "MIT"

[dependencies]
# Async runtime for Rust
tokio = { version = "1.28", features = ["full"] }

# Kafka/Redpanda client library
rdkafka = { version = "0.30", features = ["tokio"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: logging
log = "0.4"
env_logger = "0.10"
